tests/ui/consts/issue-19244-1.rs
const TUP: (usize,) = (42,);

fn main() {
    let a: [isize; TUP.1];
    //~^ ERROR no field `1` on type `(usize,)`
}
